--- a/royal_flush/requirements.txt
+++ b/royal_flush/requirements.txt
@@ -7,5 +7,8 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-dotenv==1.0.0
 httpx==0.25.2
-pandas==2.1.4
-numpy==1.24.3
+pandas>=2.2.0
+numpy>=1.26.0
+langgraph==0.0.62
+langchain-core>=0.2.0
+akshare>=1.12.0
